[AS7-6355] Remove -Djava.endorsed.dirs usage from ws tool scripts