@@ -72,7 +72,6 @@ fi
 
 # Execute the command
 eval \"$JAVA\" $JAVA_OPTS \
-    \"-Djava.endorsed.dirs=$JBOSS_HOME/modules/com/sun/xml/bind/main:$JBOSS_HOME/modules/javax/xml/ws/api/main\" \
     -classpath \"$JBOSS_CLASSPATH\" \
     org.jboss.modules.Main \
     -mp \"$JBOSS_HOME/modules\" \
